--- a/templates/gpio-keys.dts
+++ b/templates/gpio-keys.dts
@@ -7,6 +7,10 @@
     part-number = "{{ partNumber }}";
     version = "{{ version }}";
 
+    exclusive-use =
+      "{{ header }}",
+      "gpio{{ gpioBank }}_{{ gpioOffset }}";
+
     fragment@0 {
         target = <&am33xx_pinmux>;
         __overlay__ {
@@ -35,7 +39,7 @@
                     label = "{{ label }}";
                     debounce_interval = <{{ debounceInterval }}>;
                     linux,code = <1>;
-                    gpios = <&gpio{{ gpioBank }} {{ gpioOffset }} {{ isActiveLow }}>;
+                    gpios = <&gpio{{ gpioBankPlusOne }} {{ gpioOffset }} {{ isActiveLow }}>;
                     gpio-key,wakeup;
                 };
             };
