--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [
     "beaglebone",
     "gpio",
+    "pwm",
     "button",
     "led"
   ],
@@ -13,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "~2.4.1",
-    "glob": "~4.0.3"
+    "glob": "~4.0.4"
   },
   "engines": {
     "node": ">=0.10.0"
