--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "gpio",
     "pwm",
     "button",
-    "led"
+    "led",
+    "uart",
+    "serial"
   ],
   "repository": "fivdi/brkontru",
   "license": "MIT",
   "dependencies": {
+    "nan": "~1.3.0",
+    "bindings": "~1.2.1",
+    "duplexify": "3.2.0",
     "lodash": "~2.4.1",
     "glob": "~4.0.5"
   },
@@ -22,7 +27,9 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "node-gyp rebuild"
+  },
+  "gypfile": true
 }
 
