--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "nan": "~1.3.0",
     "bindings": "~1.2.1",
-    "duplexify": "3.2.0",
+    "duplexify": "~3.2.0",
     "lodash": "~2.4.1",
-    "glob": "~4.0.5"
+    "glob": "~4.0.6"
   },
   "engines": {
     "node": ">=0.10.0"
