--- a/templates/gpio.dts
+++ b/templates/gpio.dts
@@ -13,9 +13,24 @@
   fragment@0 {
     target = <&am33xx_pinmux>;
     __overlay__ {
-      {{ name }}_pins: pinmux_{{ name }}_pins {
+      {{ name }}_default_pin: pinmux_{{ name }}_default_pin {
         pinctrl-single,pins = <
           {{ muxOffset }} {{ muxValue }}
+        >;
+      };
+      {{ name }}_pin: pinmux_{{ name }}_pin {
+        pinctrl-single,pins = <
+          {{ muxOffset }} 0x2f
+        >;
+      };
+      {{ name }}_pu_pin: pinmux_{{ name }}_pu_pin {
+        pinctrl-single,pins = <
+          {{ muxOffset }} 0x37
+        >;
+      };
+      {{ name }}_pd_pin: pinmux_{{ name }}_pd_pin {
+        pinctrl-single,pins = <
+          {{ muxOffset }} 0x27
         >;
       };
     };
@@ -27,8 +42,11 @@
       {{ name }} {
         compatible = "bone-pinmux-helper";
         status = "okay";
-        pinctrl-names = "default";
-        pinctrl-0 = <&{{ name }}_pins>;
+        pinctrl-names = "default", "gpio", "gpio_pu", "gpio_pd";
+        pinctrl-0 = <&{{ name }}_default_pin>;
+        pinctrl-1 = <&{{ name }}_pin>;
+        pinctrl-2 = <&{{ name }}_pu_pin>;
+        pinctrl-3 = <&{{ name }}_pd_pin>;
       };
     };
   };
