--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brkontru",
-  "description": "Break on Through - Easy access to the BeagleBone Black GPIO expansion headers",
+  "description": "Break on Through - ADC, GPIO, PWM, UARTs, and more on the BeagleBone Black.",
   "version": "0.8.0",
   "author": "fivdi",
   "keywords": [
