gpio interrupt support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pwm",
     "button",
     "led",
+    "interrupt",
     "uart",
     "serial"
   ],
@@ -21,7 +22,8 @@
     "bindings": "~1.2.1",
     "duplexify": "~3.2.0",
     "lodash": "~2.4.1",
-    "glob": "~4.0.6"
+    "glob": "~4.0.6",
+    "epoll": "~0.1.9"
   },
   "engines": {
     "node": ">=0.10.0"
